Rename package from 'react-native-munim-wifi' to 'munim-wifi' across all relevant files, including podspec, package.json, README, and example files. Update repository links and installation instructions accordingly.

--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-munim-wifi-example",
+  "name": "munim-wifi-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
