--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -6,7 +6,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "react-native-munim-wifi": ["../src"]
+      "munim-wifi": ["../src"]
     }
   }
 }
