--- a/example/ios/MunimWifiExample/Info.plist
+++ b/example/ios/MunimWifiExample/Info.plist
@@ -35,7 +35,9 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>This app uses location services to scan for nearby Wi-Fi networks</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app uses location services to scan for nearby Wi-Fi networks</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
